--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{}
+{"assets/image1.png":["assets/image1.png"],"assets/image2.png":["assets/image2.png"],"assets/image3.png":["assets/image3.png"],"assets/image4.png":["assets/image4.png"],"assets/image5.png":["assets/image5.png"],"assets/omni_test_viz.png":["assets/omni_test_viz.png"]}
